--- a/scarpping_selenium.ipynb
+++ b/scarpping_selenium.ipynb
@@ -2,20 +2,70 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.keys import Keys\n",
+    "from selenium.webdriver.common.by import By\n",
+    "import time\n",
+    "\n",
+    "driver=webdriver.Chrome()\n",
+    "driver.get(\"http://www.python.org\")\n",
+    "assert \"Python\" in driver.title\n",
+    "elem=driver.find_element(By.NAME,\"q\")\n",
+    "elem.clear()\n",
+    "elem.send_keys(\"pycon\")\n",
+    "elem.send_keys(Keys.RETURN)\n",
+    "time.sleep(6)\n",
+    "assert \"No result Found\" not in driver.page_source\n",
+    "driver.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "'deactivate' is not recognized as an internal or external command,\n",
-      "operable program or batch file.\n"
+     "ename": "NoSuchElementException",
+     "evalue": "Message: no such element: Unable to locate element: {\"method\":\"css selector\",\"selector\":\"[name=\"input\"]\"}\n  (Session info: chrome=133.0.6943.98); For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception\nStacktrace:\n\tGetHandleVerifier [0x00007FF70C426F15+28773]\n\t(No symbol) [0x00007FF70C392600]\n\t(No symbol) [0x00007FF70C228FAA]\n\t(No symbol) [0x00007FF70C27F286]\n\t(No symbol) [0x00007FF70C27F4BC]\n\t(No symbol) [0x00007FF70C2D2A27]\n\t(No symbol) [0x00007FF70C2A728F]\n\t(No symbol) [0x00007FF70C2CF6F3]\n\t(No symbol) [0x00007FF70C2A7023]\n\t(No symbol) [0x00007FF70C26FF5E]\n\t(No symbol) [0x00007FF70C2711E3]\n\tGetHandleVerifier [0x00007FF70C77425D+3490733]\n\tGetHandleVerifier [0x00007FF70C78BA43+3586963]\n\tGetHandleVerifier [0x00007FF70C78147D+3544525]\n\tGetHandleVerifier [0x00007FF70C4EC9DA+838442]\n\t(No symbol) [0x00007FF70C39D04F]\n\t(No symbol) [0x00007FF70C399614]\n\t(No symbol) [0x00007FF70C3997B6]\n\t(No symbol) [0x00007FF70C388CE9]\n\tBaseThreadInitThunk [0x00007FFD288D259D+29]\n\tRtlUserThreadStart [0x00007FFD2984AF38+40]\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNoSuchElementException\u001b[0m                    Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[12], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNational Air Quality Index\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m driver\u001b[38;5;241m.\u001b[39mtitle\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# Locate the CAPTCHA input field\u001b[39;00m\n\u001b[1;32m----> 8\u001b[0m elem \u001b[38;5;241m=\u001b[39m \u001b[43mdriver\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfind_element\u001b[49m\u001b[43m(\u001b[49m\u001b[43mBy\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mNAME\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43minput\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      9\u001b[0m elem\u001b[38;5;241m.\u001b[39mclear()\n\u001b[0;32m     11\u001b[0m \u001b[38;5;66;03m# Wait for the user to manually solve the CAPTCHA\u001b[39;00m\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python312\\site-packages\\selenium\\webdriver\\remote\\webdriver.py:888\u001b[0m, in \u001b[0;36mWebDriver.find_element\u001b[1;34m(self, by, value)\u001b[0m\n\u001b[0;32m    885\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m NoSuchElementException(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCannot locate relative element with: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mby\u001b[38;5;241m.\u001b[39mroot\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    886\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m elements[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m--> 888\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mCommand\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mFIND_ELEMENT\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m{\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43musing\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mby\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mvalue\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m}\u001b[49m\u001b[43m)\u001b[49m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python312\\site-packages\\selenium\\webdriver\\remote\\webdriver.py:429\u001b[0m, in \u001b[0;36mWebDriver.execute\u001b[1;34m(self, driver_command, params)\u001b[0m\n\u001b[0;32m    427\u001b[0m response \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcommand_executor\u001b[38;5;241m.\u001b[39mexecute(driver_command, params)\n\u001b[0;32m    428\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m response:\n\u001b[1;32m--> 429\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43merror_handler\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcheck_response\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresponse\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    430\u001b[0m     response[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_unwrap_value(response\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m))\n\u001b[0;32m    431\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m response\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python312\\site-packages\\selenium\\webdriver\\remote\\errorhandler.py:232\u001b[0m, in \u001b[0;36mErrorHandler.check_response\u001b[1;34m(self, response)\u001b[0m\n\u001b[0;32m    230\u001b[0m         alert_text \u001b[38;5;241m=\u001b[39m value[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124malert\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtext\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    231\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace, alert_text)  \u001b[38;5;66;03m# type: ignore[call-arg]  # mypy is not smart enough here\u001b[39;00m\n\u001b[1;32m--> 232\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace)\n",
+      "\u001b[1;31mNoSuchElementException\u001b[0m: Message: no such element: Unable to locate element: {\"method\":\"css selector\",\"selector\":\"[name=\"input\"]\"}\n  (Session info: chrome=133.0.6943.98); For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception\nStacktrace:\n\tGetHandleVerifier [0x00007FF70C426F15+28773]\n\t(No symbol) [0x00007FF70C392600]\n\t(No symbol) [0x00007FF70C228FAA]\n\t(No symbol) [0x00007FF70C27F286]\n\t(No symbol) [0x00007FF70C27F4BC]\n\t(No symbol) [0x00007FF70C2D2A27]\n\t(No symbol) [0x00007FF70C2A728F]\n\t(No symbol) [0x00007FF70C2CF6F3]\n\t(No symbol) [0x00007FF70C2A7023]\n\t(No symbol) [0x00007FF70C26FF5E]\n\t(No symbol) [0x00007FF70C2711E3]\n\tGetHandleVerifier [0x00007FF70C77425D+3490733]\n\tGetHandleVerifier [0x00007FF70C78BA43+3586963]\n\tGetHandleVerifier [0x00007FF70C78147D+3544525]\n\tGetHandleVerifier [0x00007FF70C4EC9DA+838442]\n\t(No symbol) [0x00007FF70C39D04F]\n\t(No symbol) [0x00007FF70C399614]\n\t(No symbol) [0x00007FF70C3997B6]\n\t(No symbol) [0x00007FF70C388CE9]\n\tBaseThreadInitThunk [0x00007FFD288D259D+29]\n\tRtlUserThreadStart [0x00007FFD2984AF38+40]\n"
      ]
     }
    ],
    "source": [
-    "!deactivate"
+    "driver = webdriver.Chrome()\n",
+    "\n",
+    "# Open the website\n",
+    "driver.get(\"https://airquality.cpcb.gov.in/AQI_India/\")\n",
+    "assert \"National Air Quality Index\" in driver.title\n",
+    "\n",
+    "# Locate the CAPTCHA input field\n",
+    "elem = driver.find_element(By.NAME, \"input\")\n",
+    "elem.clear()\n",
+    "\n",
+    "# Wait for the user to manually solve the CAPTCHA\n",
+    "print(\"Please solve the CAPTCHA manually within 30 seconds.\")\n",
+    "time.sleep(30)  # Wait for 30 seconds\n",
+    "\n",
+    "# Simulate pressing the RETURN key\n",
+    "elem.send_keys(Keys.RETURN)\n",
+    "\n",
+    "# Verify that the page has loaded correctly\n",
+    "assert \"No result found\" not in driver.page_source\n",
+    "\n",
+    "# Close the browser\n",
+    "driver.close()"
    ]
   },
   {
